# Utils-Docs

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: mkdocs.yml
.mkdocsutils/: config.toml
Bash/: index.html
Bash/CLI/: index.html
Docker/: index.html
FastAPI/: index.html
FastAPI/Pydantic/: index.html
FastAPI/SQLAlchemy/: index.html
FastAPI/WebSockets/: index.html
Git/: index.html
Git/branches/: index.html
Python/: index.html
Python/60th/: index.html
Python/Asyncio/: index.html
Python/CLI/: index.html
Python/Class_methods/: index.html
Python/Dander/: index.html
Python/Decorators/: index.html
Python/Functools/: index.html
Python/Itertools/: index.html
Python/Regex/: index.html
Python/Zen/: index.html
Python/black/: index.html
Python/files/: index.html
Python/lists/: index.html
Python/poetry/: index.html
Python/ruff/: index.html
Python/strings/: index.html
Python/uv/: index.html
SQL/: index.html
VScode/: index.html
VScode/Extensions/: index.html
VScode/Tasks/: index.html
Vue.js/: index.html
cli/: main.py
cli/commands/: add.py
docs/: index.md
docs/Bash/: CLI.md
docs/Docker/: index.md
docs/FastAPI/: Pydantic.md  WebSockets.md  index.md
docs/Git/: branches.md  index.md
docs/Python/: 60th.md  CLI.md  Functools.md  Itertools.md  Zen.md  black.md  files.md  index.md  lists.md  ruff.md  uv.md  (+1 more)
search/: search_index.json
stylesheets/: extra.css
utils/: add_to_docs.py  config.py  format_all_md_files.py  search.py  utils.py
(+8 files in other folders)
