[project]
name = "mkdocs-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.21.3",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "simple-term-menu>=1.6.6",
    "typer>=0.26.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[project.scripts]
udocs = "cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cli", "cli.commands", "utils"]